--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background-color: #f1f1f1;
       text-align:center;
       padding: 40px">
-      <img src="C:\Users\jmao6\OneDrive - JNJ\jmao6\SA project\Perosonal development\网页编程\头像.jpg" alt="毛晨鑫" width="80px" height="100";
+      <img src="https://jerrymao1982.github.io/xdudu.github.io/头像.jpg" alt="毛晨鑫" width="80px" height="100";
     </div>
     <div style="
         background-color: rgba(51, 4, 51, 0.133);
