--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>康文昌的在线HTML 教学小工具</title>
+    <title>暮蓝寒冬的主页</title>
     <style>  
       body {
         margin: 0;
@@ -15,7 +15,7 @@
       background-color: #f1f1f1;
       text-align:center;
       padding: 40px">
-      <img src="https://jerrymao1982.github.io/xdudu.github.io/头像.jpg" alt="毛晨鑫" width="80px" height="100";
+      <img src="https://jerrymao1982.github.io/xdudu.github.io/头像.jpg" alt="毛晨鑫" width="80px" height="110";
     </div>
     <div style="
         background-color: rgba(51, 4, 51, 0.133);
